Fixed paragraph spacing

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1106,6 +1106,9 @@ body { background-color: var(--background); }
         justify-content: center;
         margin-top: 5vh;
     }
+    br {
+        margin-bottom: 2vh;
+    }
 }
 
 #post {
